--- a/templates/login_hosp.html
+++ b/templates/login_hosp.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        label{
+        font-size:21px;
+        color:black;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Hospital Login</title>
 </head>
 <body>
-<div class="jumbotron">
-<h1 style="color:#6666FF">Login Page</h1>
+<div class="jumbotron" style="background-color: #00CED1;font-family:georgia">
+<h1 style="color:black">Login Page</h1>
     </div>
 <div class="container">
 <form class="form-group" action="/loginhosp" method="POST">
-Phone Number: <input type="text" class="form-control" name="phno"><br><br>
-Password: <input type="password" class="form-control" name="pass"><br><br>
-    <button class="btn btn-primary" type="submit">Submit</button>
+    <label>Phone Number:</label> <input type="text" class="form-control" name="phno" placeholder="Enter phone number"><br><br>
+<label>Password:</label> <input type="password" class="form-control" name="pass" placeholder="Enter password"><br><br>
+    <button class="btn btn-primary" type="submit" style="color:black;background:#00CED1">Submit</button>
 </form>
 </div>
 </body>
