--- a/templates/signsuccess.html
+++ b/templates/signsuccess.html
@@ -10,6 +10,6 @@
         <div class="alert alert-success">
             <strong>You have successfully registered. You can now update the number of beds at any time.</strong>
           </div>
-        <a href='/first'> <button type="button" class="btn btn-primary">Login Page</button></a>
+        <a href='/hospital_login'> <button type="button" class="btn btn-primary">Login Page</button></a>
     </body>
 </html>
