--- a/templates/update.html
+++ b/templates/update.html
@@ -34,7 +34,7 @@
 
     }
 </script>
-  <div class="jumbotron" style="background-color: #00CED1;font-family:georgia"><h1><center>{{value[0][0]}}</center></h1></div>
+  <div class="jumbotron" style="background-color: #00CED1;font-family:georgia"><h1><center>{{value[0][0]}} Hospital</center></h1></div>
 <div class="container">
   <table class="table table-dark" >
 <thead>
