Prefinal Commit-final

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
 
       <ul type="disc" style="font-family:georgia;font-size:20px;color:#000">
      <li> <p><a style="color:#000" href="/first">Covid Beds</a></p></li>
-      <li><p><a style="color:#000" href="/bargraph">Demand-Supply Gap Analysis</a></p></li>
+      <li><p><a style="color:#000" href="bargraph">Demand-Supply Gap Analysis</a></p></li>
       <li><p><a style="color:#000" href="/covidhome">Covid Home management</a></p></li>
         </ul>
     </div>
