--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -14,7 +14,7 @@
     <div class="alert alert-success">
   <strong>Your request has been noted.!</strong>
     </div>
-<a href="/bargraph"><button class="btn btn-primary" style="background-color: #00CED1" type="submit">Redirect to Bargraph</button></a>
+<a href="/"><button class="btn btn-primary" style="background-color: #00CED1" type="submit">Go to home page</button></a>
 </div>
 </body>
 </html>
